Add basic Elm app
This commit contains all the things which are needed to display
a simple "Hello, World!" in Elm in a Rails app.

The infrastructure for compiling the code is missing,
but it's not the point of focus as of now. The compilation step is going
to be solved later by using either elm-webpack-loader [1] or a Makefile.

[1] https://github.com/rtfeldman/elm-webpack-loader

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Per our convention, *.elm.js files are files compiled by elm-make.
+# They are supposed to be loaded through Sprockets `//= require`
+# in regular JS files found in app/assets/javascripts.
+app/assets/javascripts/*.elm.js
