--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,20 @@ bower.json
 # Ignore Byebug command history file.
 .byebug_history
 
-# Per our convention, *.elm.js files are files compiled by elm-make.
+# Per our convention, *.webpack.js files are files compiled by webpack.
 # They are supposed to be loaded through Sprockets `//= require`
 # in regular JS files found in app/assets/javascripts.
-app/assets/javascripts/*.elm.js
+app/assets/javascripts/*.webpack.js
+
+node_modules
+
+# elm-stuff if Elm's equivalent of npm's node_modules.
+/elm-stuff/*
+
+# exact-dependencies.json is Elm's equivalent of Ruby's Gemfile.lock.
+# Since we're developing an app, we want to keep the exact dependencies in sync.
+# Thus, we whitelist this file.
+!/elm-stuff/exact-dependencies.json
+
+# Temporary files left by the Elm REPL.
+repl-temp-*
